--- a/res/layout/current_game_summary_list_item.xml
+++ b/res/layout/current_game_summary_list_item.xml
@@ -171,7 +171,7 @@
             android:layout_alignParentTop="true"
             android:layout_margin="4dip"
             android:focusable="false"
-            android:text="개인 통계"
+            android:text="@string/fragment_current_game_summary_personal_statistics"
             android:textAppearance="?attr/textAppearanceSmall" />
 
         <RelativeLayout
@@ -308,7 +308,7 @@
                     android:layout_height="24dip"
                     android:layout_marginRight="4dip"
                     android:gravity="center"
-                    android:text="@string/fragment_current_score_handicap"
+                    android:text="@string/handicap"
                     android:textAppearance="?attr/textAppearanceSmall"
                     android:textColor="?attr/secondaryTextColor" />
 
@@ -328,7 +328,7 @@
                     android:layout_marginLeft="8dip"
                     android:layout_marginRight="4dip"
                     android:gravity="center"
-                    android:text="@string/fragment_current_score_remain_handicap"
+                    android:text="@string/remain_handicap"
                     android:textAppearance="?attr/textAppearanceSmall"
                     android:textColor="?attr/secondaryTextColor" />
 
