--- a/res/layout-xhdpi-1280x800/personal_statistics_summary_item.xml
+++ b/res/layout-xhdpi-1280x800/personal_statistics_summary_item.xml
@@ -33,7 +33,7 @@
             android:layout_marginBottom="4dip"
             android:layout_marginTop="4dip"
             android:gravity="center"
-            android:text="경기"
+            android:text="@string/game"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -57,7 +57,7 @@
             android:layout_marginTop="4dip"
             android:layout_toRightOf="@+id/AttendCountTextView"
             android:gravity="center"
-            android:text="총금액"
+            android:text="@string/fragment_personal_statistics_summary_total_fee"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -109,7 +109,7 @@
             android:layout_marginRight="4dip"
             android:layout_marginTop="4dip"
             android:gravity="center"
-            android:text="평균순위"
+            android:text="@string/fragment_personal_statistics_summary_avg_ranking"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -126,7 +126,7 @@
             android:layout_marginLeft="4dip"
             android:layout_marginRight="4dip"
             android:gravity="center"
-            android:text="최고"
+            android:text="@string/fragment_personal_statistics_summary_max"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -143,7 +143,7 @@
             android:layout_marginLeft="4dip"
             android:layout_marginRight="4dip"
             android:gravity="center"
-            android:text="최저"
+            android:text="@string/fragment_personal_statistics_summary_min"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -162,7 +162,7 @@
             android:layout_marginRight="4dip"
             android:layout_marginTop="4dip"
             android:gravity="center"
-            android:text="1 위"
+            android:text="@string/fragment_personal_statistics_summary_first_standing"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -190,7 +190,7 @@
             android:layout_marginRight="4dip"
             android:layout_marginTop="4dip"
             android:gravity="center"
-            android:text="최하위"
+            android:text="@string/fragment_personal_statistics_summary_last_standing"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -218,7 +218,7 @@
             android:layout_marginRight="4dip"
             android:layout_marginTop="4dip"
             android:gravity="center"
-            android:text="평균타수"
+            android:text="@string/fragment_personal_statistics_summary_avg_score"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -235,7 +235,7 @@
             android:layout_marginLeft="4dip"
             android:layout_marginRight="4dip"
             android:gravity="center"
-            android:text="최고"
+            android:text="@string/fragment_personal_statistics_summary_max"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -252,7 +252,7 @@
             android:layout_marginLeft="4dip"
             android:layout_marginRight="4dip"
             android:gravity="center"
-            android:text="최저"
+            android:text="@string/fragment_personal_statistics_summary_min"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -272,7 +272,7 @@
             android:layout_marginTop="4dip"
             android:layout_rowSpan="2"
             android:gravity="center"
-            android:text="평균금액"
+            android:text="@string/fragment_personal_statistics_summary_avg_fee"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -290,7 +290,7 @@
             android:layout_marginLeft="4dip"
             android:layout_marginRight="4dip"
             android:gravity="center"
-            android:text="최고"
+            android:text="@string/fragment_personal_statistics_summary_max"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
@@ -308,7 +308,7 @@
             android:layout_marginLeft="4dip"
             android:layout_marginRight="4dip"
             android:gravity="center"
-            android:text="최저"
+            android:text="@string/fragment_personal_statistics_summary_min"
             android:textAppearance="?attr/textAppearanceSmall"
             android:textColor="?attr/secondaryTextColor" />
 
