--- a/res/layout/current_game_new_player_setting_fragment.xml
+++ b/res/layout/current_game_new_player_setting_fragment.xml
@@ -50,7 +50,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player1DummyEditText"
                 android:layout_alignParentRight="true"
-                android:text="추가" />
+                android:text="@string/fragment_player_setting_add" />
 
             <Spinner
                 android:id="@+id/Player1NameSpinner"
@@ -78,7 +78,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player2DummyEditText"
                 android:layout_alignParentRight="true"
-                android:text="추가" />
+                android:text="@string/fragment_player_setting_add" />
 
             <Spinner
                 android:id="@+id/Player2NameSpinner"
@@ -86,7 +86,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player2DummyEditText"
                 android:layout_toLeftOf="@+id/Player2NewNameButton"
-                android:hint="@string/fragment_player_setting_hint_name1"
+                android:hint="@string/fragment_player_setting_hint_name2"
                 android:paddingLeft="15dip" />
 
             <!-- Player 3 -->
@@ -106,7 +106,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player3DummyEditText"
                 android:layout_alignParentRight="true"
-                android:text="추가" />
+                android:text="@string/fragment_player_setting_add" />
 
             <Spinner
                 android:id="@+id/Player3NameSpinner"
@@ -114,7 +114,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player3DummyEditText"
                 android:layout_toLeftOf="@+id/Player3NewNameButton"
-                android:hint="@string/fragment_player_setting_hint_name1"
+                android:hint="@string/fragment_player_setting_hint_name3"
                 android:paddingLeft="15dip" />
 
             <!-- Player 4 -->
@@ -134,7 +134,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player4DummyEditText"
                 android:layout_alignParentRight="true"
-                android:text="추가" />
+                android:text="@string/fragment_player_setting_add" />
 
             <Spinner
                 android:id="@+id/Player4NameSpinner"
@@ -142,7 +142,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player4DummyEditText"
                 android:layout_toLeftOf="@+id/Player4NewNameButton"
-                android:hint="@string/fragment_player_setting_hint_name1"
+                android:hint="@string/fragment_player_setting_hint_name4"
                 android:paddingLeft="15dip" />
 
             <!-- Player 5 -->
@@ -162,7 +162,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player5DummyEditText"
                 android:layout_alignParentRight="true"
-                android:text="추가" />
+                android:text="@string/fragment_player_setting_add" />
 
             <Spinner
                 android:id="@+id/Player5NameSpinner"
@@ -170,7 +170,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player5DummyEditText"
                 android:layout_toLeftOf="@+id/Player5NewNameButton"
-                android:hint="@string/fragment_player_setting_hint_name1"
+                android:hint="@string/fragment_player_setting_hint_name5"
                 android:paddingLeft="15dip" />
 
             <!-- Player 6 -->
@@ -190,7 +190,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player6DummyEditText"
                 android:layout_alignParentRight="true"
-                android:text="추가" />
+                android:text="@string/fragment_player_setting_add" />
 
             <Spinner
                 android:id="@+id/Player6NameSpinner"
@@ -198,7 +198,7 @@
                 android:layout_height="?attr/preferredItemHeight"
                 android:layout_alignBaseline="@+id/Player6DummyEditText"
                 android:layout_toLeftOf="@+id/Player6NewNameButton"
-                android:hint="@string/fragment_player_setting_hint_name1"
+                android:hint="@string/fragment_player_setting_hint_name6"
                 android:paddingLeft="15dip" />
         </RelativeLayout>
     </ScrollView>
