--- a/res/layout/personal_statistics_game_result_list_item.xml
+++ b/res/layout/personal_statistics_game_result_list_item.xml
@@ -38,7 +38,7 @@
         android:layout_marginRight="2dip"
         android:layout_toRightOf="@+id/RankingTextView"
         android:gravity="center"
-        android:text="/"
+        android:text="@string/fragment_personal_statistics_game_result_list_per"
         android:textAppearance="?attr/textAppearanceSmall"
         android:textColor="?attr/secondaryTextColor" />
 
@@ -47,10 +47,10 @@
         android:layout_width="wrap_content"
         android:layout_height="28dip"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/RankingPerTextView"
-        android:gravity="center"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
+        android:layout_toRightOf="@+id/RankingPerTextView"
+        android:gravity="center"
         android:textAppearance="?attr/textAppearanceSmall"
         android:textColor="?attr/secondaryTextColor" />
 
