--- a/res/layout/onegame_hole_result_fragment.xml
+++ b/res/layout/onegame_hole_result_fragment.xml
@@ -107,6 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/GameSettingView" />
 
 </RelativeLayout>
