--- a/res/menu/current_game.xml
+++ b/res/menu/current_game.xml
@@ -58,5 +58,10 @@
         android:icon="?settingMenuIcon"
         android:showAsAction="withText"
         android:title="@string/menu_settings"/>
+    <item
+        android:id="@+id/About"
+        android:icon="?aboutMenuIcon"
+        android:showAsAction="withText"
+        android:title="@string/menu_about"/>
 
 </menu>
