--- a/res/menu/activity_history.xml
+++ b/res/menu/activity_history.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/Reset"
+        android:alphabeticShortcut="r"
+        android:icon="?deleteMenuIcon"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_reset"/>
+    
+    <item
         android:id="@+id/Settings"
         android:alphabeticShortcut="s"
         android:icon="?settingMenuIcon"
