--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -12,4 +12,9 @@
 		android:summary="@string/preference_auto_upload_summary"
 		android:defaultValue="true" />
 
+	<CheckBoxPreference android:key="@string/preference_auto_download_key"
+		android:title="@string/preference_auto_download_title"
+		android:summary="@string/preference_auto_download_summary"
+		android:defaultValue="true" />
+
 </PreferenceScreen>
