--- a/res/menu/current_game.xml
+++ b/res/menu/current_game.xml
@@ -2,38 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/NewGame"
-        android:alphabeticShortcut="n"
-        android:icon="?newMenuIcon"
+        android:id="@+id/ImportThisGame"
+        android:alphabeticShortcut="g"
+        android:icon="?refreshMenuIcon"
         android:showAsAction="ifRoom|withText"
-        android:title="@string/menu_new_game"/>
-    <item
-        android:id="@+id/NetShare"
-        android:alphabeticShortcut="b"
-        android:icon="?cloudMenuIcon"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/menu_cloud">
-        <menu>
-            <item
-                android:id="@+id/NetShareSendData"
-                android:alphabeticShortcut="x"
-                android:icon="?uploadMenuIcon"
-                android:showAsAction="ifRoom|withText"
-                android:title="@string/menu_export"/>
-            <item
-                android:id="@+id/NetShareReceiveData"
-                android:alphabeticShortcut="m"
-                android:icon="?downloadMenuIcon"
-                android:showAsAction="ifRoom|withText"
-                android:title="@string/menu_import"/>
-        </menu>
-    </item>
-    <item
-        android:id="@+id/ModifyGame"
-        android:alphabeticShortcut="m"
-        android:icon="?editMenuIcon"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/menu_modify_game"/>
+        android:title="@string/menu_import_this_game"/>
     <item
         android:id="@+id/AddResult"
         android:alphabeticShortcut="a"
@@ -41,16 +14,34 @@
         android:showAsAction="ifRoom|withText"
         android:title="@string/menu_add_result"/>
     <item
+        android:id="@+id/NewGame"
+        android:alphabeticShortcut="n"
+        android:icon="?newMenuIcon"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_new_game"/>
+    <item
+        android:id="@+id/ModifyGame"
+        android:alphabeticShortcut="m"
+        android:icon="?editMenuIcon"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_modify_game"/>
+    <item
         android:id="@+id/Save"
         android:alphabeticShortcut="v"
         android:icon="?saveMenuIcon"
         android:showAsAction="ifRoom|withText"
         android:title="@string/menu_save"/>
     <item
-        android:id="@+id/Settings"
-        android:alphabeticShortcut="s"
-        android:icon="?settingMenuIcon"
+        android:id="@+id/NetShareSendData"
+        android:alphabeticShortcut="x"
+        android:icon="?uploadMenuIcon"
         android:showAsAction="withText"
-        android:title="@string/menu_settings"/>
+        android:title="@string/menu_export"/>
+    <item
+        android:id="@+id/NetShareReceiveData"
+        android:alphabeticShortcut="m"
+        android:icon="?downloadMenuIcon"
+        android:showAsAction="withText"
+        android:title="@string/menu_import"/>
 
 </menu>
