--- a/res/layout/main_game_result_history_list_item.xml
+++ b/res/layout/main_game_result_history_list_item.xml
@@ -52,7 +52,7 @@
 
     <View
         android:id="@+id/Player1TagView"
-        android:layout_width="220dip"
+        android:layout_width="180dip"
         android:layout_height="35dip"
         android:layout_alignBottom="@+id/Player1Space"
         android:layout_alignParentLeft="true"
@@ -64,14 +64,14 @@
         android:layout_height="80dip"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/TopView"
-        android:layout_marginLeft="8dip"
+        android:layout_marginLeft="4dip"
         android:contentDescription="@string/player"
         android:scaleType="fitCenter"
         android:src="@drawable/face_unknown_r" />
 
     <TextView
         android:id="@+id/Player1NameTextView"
-        android:layout_width="140dp"
+        android:layout_width="100dip"
         android:layout_height="35dip"
         android:layout_alignBottom="@+id/Player1Image"
         android:layout_toRightOf="@+id/Player1Image"
@@ -81,13 +81,25 @@
 
     <TextView
         android:id="@+id/Player1ScoreTextView"
-        android:layout_width="140dp"
+        android:layout_width="70dip"
         android:layout_height="match_parent"
         android:layout_above="@+id/Player1NameTextView"
         android:layout_below="@+id/TopView"
         android:layout_toRightOf="@+id/Player1Image"
         android:gravity="center"
         android:textAppearance="?attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/Player1OriginalScoreTextView"
+        android:layout_width="35dip"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/Player1NameTextView"
+        android:layout_below="@+id/TopView"
+        android:layout_marginLeft="-15dip"
+        android:layout_toRightOf="@+id/Player1ScoreTextView"
+        android:gravity="center"
+        android:textAppearance="?attr/textAppearanceSmall"
+        android:textSize="10sp" />
 
     <View
         android:id="@+id/Player2Space"
@@ -110,7 +122,7 @@
         android:layout_width="40dip"
         android:layout_height="40dip"
         android:layout_below="@+id/TopView"
-        android:layout_marginLeft="8dip"
+        android:layout_marginLeft="4dip"
         android:layout_toRightOf="@+id/Player1TagView"
         android:contentDescription="@string/player"
         android:scaleType="fitCenter"
@@ -121,7 +133,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dip"
         android:layout_alignBottom="@+id/Player2Image"
-        android:layout_marginLeft="24dip"
+        android:layout_marginLeft="4dip"
         android:layout_toRightOf="@+id/Player2Image"
         android:gravity="center_vertical|left"
         android:textAppearance="?attr/textAppearanceSmall"
@@ -129,14 +141,26 @@
 
     <TextView
         android:id="@+id/Player2ScoreTextView"
+        android:layout_width="50dip"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/Player2NameTextView"
+        android:layout_below="@+id/TopView"
+        android:layout_marginLeft="8dip"
+        android:layout_toRightOf="@+id/Player2Image"
+        android:gravity="center_vertical|left"
+        android:textAppearance="?attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/Player2OriginalScoreTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/Player2NameTextView"
         android:layout_below="@+id/TopView"
-        android:layout_marginLeft="24dip"
-        android:layout_toRightOf="@+id/Player2Image"
+        android:layout_marginLeft="-10dip"
+        android:layout_toRightOf="@+id/Player2ScoreTextView"
         android:gravity="center_vertical|left"
-        android:textAppearance="?attr/textAppearanceSmall" />
+        android:textAppearance="?attr/textAppearanceSmall"
+        android:textSize="10sp" />
 
     <View
         android:id="@+id/Player3Space"
@@ -158,7 +182,7 @@
         android:layout_width="40dip"
         android:layout_height="40dip"
         android:layout_below="@+id/Player2Image"
-        android:layout_marginLeft="8dip"
+        android:layout_marginLeft="4dip"
         android:layout_toRightOf="@+id/Player1TagView"
         android:contentDescription="@string/player"
         android:scaleType="fitCenter"
@@ -169,7 +193,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dip"
         android:layout_alignBottom="@+id/Player3Image"
-        android:layout_marginLeft="24dip"
+        android:layout_marginLeft="4dip"
         android:layout_toRightOf="@+id/Player3Image"
         android:gravity="center_vertical|left"
         android:textAppearance="?attr/textAppearanceSmall"
@@ -177,14 +201,26 @@
 
     <TextView
         android:id="@+id/Player3ScoreTextView"
+        android:layout_width="50dip"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/Player3NameTextView"
+        android:layout_below="@+id/Player2Image"
+        android:layout_marginLeft="8dip"
+        android:layout_toRightOf="@+id/Player3Image"
+        android:gravity="center_vertical|left"
+        android:textAppearance="?attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/Player3OriginalScoreTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/Player3NameTextView"
         android:layout_below="@+id/Player2Image"
-        android:layout_marginLeft="24dip"
-        android:layout_toRightOf="@+id/Player3Image"
+        android:layout_marginLeft="-10dip"
+        android:layout_toRightOf="@+id/Player3ScoreTextView"
         android:gravity="center_vertical|left"
-        android:textAppearance="?attr/textAppearanceSmall" />
+        android:textAppearance="?attr/textAppearanceSmall"
+        android:textSize="10sp" />
 
     <Space
         android:id="@+id/HorizontalSpace"
@@ -213,7 +249,7 @@
 
     <TextView
         android:id="@+id/Player4ScoreTextView"
-        android:layout_width="80dip"
+        android:layout_width="25dip"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/Player4TagView"
         android:layout_marginLeft="4dip"
@@ -222,13 +258,23 @@
         android:textAppearance="?attr/textAppearanceSmall"
         android:textSize="12sp" />
 
+    <TextView
+        android:id="@+id/Player4OriginalScoreTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/Player4ScoreTextView"
+        android:layout_toRightOf="@+id/Player4ScoreTextView"
+        android:gravity="center_vertical|left"
+        android:textAppearance="?attr/textAppearanceSmall"
+        android:textSize="10sp" />
+
     <View
         android:id="@+id/Player5TagView"
         android:layout_width="8dip"
         android:layout_height="30dip"
         android:layout_below="@+id/HorizontalSpace"
         android:layout_marginLeft="4dip"
-        android:layout_toRightOf="@+id/Player4ScoreTextView"
+        android:layout_toRightOf="@+id/Player4NameTextView"
         android:background="#aaffbb33" />
 
     <TextView
@@ -244,7 +290,7 @@
 
     <TextView
         android:id="@+id/Player5ScoreTextView"
-        android:layout_width="80dip"
+        android:layout_width="25dip"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/Player5TagView"
         android:layout_marginLeft="4dip"
@@ -253,13 +299,23 @@
         android:textAppearance="?attr/textAppearanceSmall"
         android:textSize="12sp" />
 
+    <TextView
+        android:id="@+id/Player5OriginalScoreTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/Player5ScoreTextView"
+        android:layout_toRightOf="@+id/Player5ScoreTextView"
+        android:gravity="center_vertical|left"
+        android:textAppearance="?attr/textAppearanceSmall"
+        android:textSize="10sp" />
+
     <View
         android:id="@+id/Player6TagView"
         android:layout_width="8dip"
         android:layout_height="30dip"
         android:layout_below="@+id/HorizontalSpace"
         android:layout_marginLeft="4dip"
-        android:layout_toRightOf="@+id/Player5ScoreTextView"
+        android:layout_toRightOf="@+id/Player5NameTextView"
         android:background="#aa999999" />
 
     <TextView
@@ -275,7 +331,7 @@
 
     <TextView
         android:id="@+id/Player6ScoreTextView"
-        android:layout_width="80dip"
+        android:layout_width="25dip"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/Player6TagView"
         android:layout_marginLeft="4dip"
@@ -283,5 +339,15 @@
         android:gravity="center_vertical|left"
         android:textAppearance="?attr/textAppearanceSmall"
         android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/Player6OriginalScoreTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/Player6ScoreTextView"
+        android:layout_toRightOf="@+id/Player6ScoreTextView"
+        android:gravity="center_vertical|left"
+        android:textAppearance="?attr/textAppearanceSmall"
+        android:textSize="10sp" />
 
 </RelativeLayout>
