--- a/res/layout/menu_fragment.xml
+++ b/res/layout/menu_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/tile_menu_bg" >
 
     <TextView
         android:id="@+id/VersionTextView"
@@ -13,7 +14,7 @@
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
         android:paddingTop="4dp"
-        android:text="버전 1.1.12"
+        android:text="@string/version"
         android:textColor="#ffffffff" />
 
     <ListView
